; ModuleID = '/home/carl/AnghaBench/8cc/extr_map.c_hash.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_map.c_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (i8*)* @hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal signext i8 @hash(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8, align 1
  store i8* %0, i8** %2, align 8
  store i8 -59, i8* %3, align 1
  br label %4

4:                                                ; preds = %20, %1
  %5 = load i8*, i8** %2, align 8
  %6 = load i8, i8* %5, align 1
  %7 = icmp ne i8 %6, 0
  br i1 %7, label %8, label %23

8:                                                ; preds = %4
  %9 = load i8*, i8** %2, align 8
  %10 = load i8, i8* %9, align 1
  %11 = sext i8 %10 to i32
  %12 = load i8, i8* %3, align 1
  %13 = sext i8 %12 to i32
  %14 = xor i32 %13, %11
  %15 = trunc i32 %14 to i8
  store i8 %15, i8* %3, align 1
  %16 = load i8, i8* %3, align 1
  %17 = sext i8 %16 to i32
  %18 = mul nsw i32 %17, 16777619
  %19 = trunc i32 %18 to i8
  store i8 %19, i8* %3, align 1
  br label %20

20:                                               ; preds = %8
  %21 = load i8*, i8** %2, align 8
  %22 = getelementptr inbounds i8, i8* %21, i32 1
  store i8* %22, i8** %2, align 8
  br label %4

23:                                               ; preds = %4
  %24 = load i8, i8* %3, align 1
  ret i8 %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
